--- a/index.html
+++ b/index.html
@@ -42,12 +42,12 @@
                     </div>
                     <h1>START BOOTSTRAP</h1>
                     <div class="star-and-line-container">
-                        <div class="row align-items-center">
+                        <div class="row gx-0 align-items-center">
                             <div class="col-3 offset-2">
                                 <div class="line-bf-star"></div>
                             </div>
 
-                            <div class="col-1 col-md-2 d-flex justify-content-center">
+                            <div class="col-2 d-flex justify-content-center">
                                 <div class="star-container">
                                     <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 576 512" fill="currentColor">
                                         <!--! Font Awesome Pro 6.1.1 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2022 Fonticons, Inc. -->
@@ -66,10 +66,83 @@
                 </div>
             </div>
         </div>
-    </main>
+        <div class="portfolio">
+            <div class="container">
+                <div class="d-flex flex-column align-items-center justify-content-center mb-4">
+                    <h2>PORTFOLIO</h2>
+                    <div class="star-and-line-container">
+                        <div class="row gx-0 align-items-center">
+                            <div class="col-3 offset-2">
+                                <div class="line-bf-star"></div>
+                            </div>
 
-    <main>
+                            <div class="col-2 d-flex justify-content-center">
+                                <div class="star-container">
+                                    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 576 512" fill="currentColor">
+                                        <!--! Font Awesome Pro 6.1.1 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2022 Fonticons, Inc. -->
+                                        <path
+                                            d="M381.2 150.3L524.9 171.5C536.8 173.2 546.8 181.6 550.6 193.1C554.4 204.7 551.3 217.3 542.7 225.9L438.5 328.1L463.1 474.7C465.1 486.7 460.2 498.9 450.2 506C440.3 513.1 427.2 514 416.5 508.3L288.1 439.8L159.8 508.3C149 514 135.9 513.1 126 506C116.1 498.9 111.1 486.7 113.2 474.7L137.8 328.1L33.58 225.9C24.97 217.3 21.91 204.7 25.69 193.1C29.46 181.6 39.43 173.2 51.42 171.5L195 150.3L259.4 17.97C264.7 6.954 275.9-.0391 288.1-.0391C300.4-.0391 311.6 6.954 316.9 17.97L381.2 150.3z" />
+                                    </svg>
+                            </div>
+                            </div>
 
+                            <div class="col-3">
+                                <div class="line-bf-star"></div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="row row-cols-1 row-cols-sm-2 row-cols-lg-3 gy-4">
+                    <div class="col">
+                        <div class="portfolio-card">
+                            <div class="img-container">
+                                <img src="img/cabin.png" alt="">
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="col">
+                        <div class="portfolio-card">
+                            <div class="img-container">
+                                <img src="img/cake.png" alt="">
+                            </div>
+                        </div>
+                    </div>
+                    
+                    <div class="col">
+                        <div class="portfolio-card">
+                            <div class="img-container">
+                                <img src="img/circus.png" alt="">
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="col">
+                        <div class="portfolio-card">
+                            <div class="img-container">
+                                <img src="img/game.png" alt="">
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="col">
+                        <div class="portfolio-card">
+                            <div class="img-container">
+                                <img src="img/safe.png" alt="">
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="col">
+                        <div class="portfolio-card">
+                            <div class="img-container">
+                                <img src="img/submarine.png" alt="">
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
     </main>
 
     <footer>
