about section completed

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     </nav>
 
     <main>
-        <div class="jumbo color-white">
+        <div class="jumbo color-white bg-jumbo">
             <div class="container">
                 <div class="d-flex flex-column align-items-center justify-content-center">
                     <div class="profile-container">
@@ -140,6 +140,69 @@
                             </div>
                         </div>
                     </div>
+                </div>
+            </div>
+        </div>
+
+        <div class="about bg-jumbo color-white py-4">
+            <div class="container">
+
+                <div class="d-flex flex-column align-items-center justify-content-center pt-4 pb-2">
+                    <h2>ABOUT</h2>
+                    <div class="star-and-line-container">
+                        <div class="row gx-0 align-items-center">
+                            <div class="col-3 offset-2">
+                                <div class="line-bf-star"></div>
+                            </div>
+
+                            <div class="col-2 d-flex justify-content-center">
+                                <div class="star-container">
+                                    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 576 512" fill="currentColor">
+                                        <!--! Font Awesome Pro 6.1.1 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2022 Fonticons, Inc. -->
+                                        <path
+                                            d="M381.2 150.3L524.9 171.5C536.8 173.2 546.8 181.6 550.6 193.1C554.4 204.7 551.3 217.3 542.7 225.9L438.5 328.1L463.1 474.7C465.1 486.7 460.2 498.9 450.2 506C440.3 513.1 427.2 514 416.5 508.3L288.1 439.8L159.8 508.3C149 514 135.9 513.1 126 506C116.1 498.9 111.1 486.7 113.2 474.7L137.8 328.1L33.58 225.9C24.97 217.3 21.91 204.7 25.69 193.1C29.46 181.6 39.43 173.2 51.42 171.5L195 150.3L259.4 17.97C264.7 6.954 275.9-.0391 288.1-.0391C300.4-.0391 311.6 6.954 316.9 17.97L381.2 150.3z" />
+                                    </svg>
+                            </div>
+                            </div>
+
+                            <div class="col-3">
+                                <div class="line-bf-star"></div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="row">
+                    <div class="col col-8 col-md-5 offset-2 offset-md-1">
+                        <div class="text-container">
+                            <p>
+                                Freelancer is a free Bootstrap theme created by Start Bootstrap.
+                                The download includes the complete source files including HTML, CSS,
+                                and JavaScript as well as optional LESS stylesheets for easy customization.
+                            </p>
+                        </div>
+                    </div>
+
+                    <div class="col col-8 col-md-5 offset-2 offset-md-0">
+                        <div class="text-container">
+                            <p>
+                                Whether you're a student looking to showcase your work,
+                                a professional looking to attract clients, or a graphic artist
+                                looking to share your projects, this template is the perfect starting point.
+                            </p>
+                        </div>
+                    </div>
+                </div>
+                <div class="text-center py-3">
+                    <button type="button" class="btn bg-jumbo">
+                        <span class="dwn-icon"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512" fill="currentColor">
+                                <!--! Font Awesome Pro 6.1.1 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2022 Fonticons, Inc. -->
+                                <path
+                                    d="M480 352h-133.5l-45.25 45.25C289.2 409.3 273.1 416 256 416s-33.16-6.656-45.25-18.75L165.5 352H32c-17.67 0-32 14.33-32 32v96c0 17.67 14.33 32 32 32h448c17.67 0 32-14.33 32-32v-96C512 366.3 497.7 352 480 352zM432 456c-13.2 0-24-10.8-24-24c0-13.2 10.8-24 24-24s24 10.8 24 24C456 445.2 445.2 456 432 456zM233.4 374.6C239.6 380.9 247.8 384 256 384s16.38-3.125 22.62-9.375l128-128c12.49-12.5 12.49-32.75 0-45.25c-12.5-12.5-32.76-12.5-45.25 0L288 274.8V32c0-17.67-14.33-32-32-32C238.3 0 224 14.33 224 32v242.8L150.6 201.4c-12.49-12.5-32.75-12.5-45.25 0c-12.49 12.5-12.49 32.75 0 45.25L233.4 374.6z" />
+                            </svg></span>
+                            <span>Download</span>
+                        
+                    </button>
                 </div>
             </div>
         </div>
